[package]
name = "raytracer-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
color = "0.0.1"
jpeg-decoder = "0.3.1"
rand = "0.8.5"
serde = { version="1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
